--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,24 +1,109 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-@theme {
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@plugin "tailwindcss-animate";
+
+@custom-variant dark (&:is(.dark *));
+
+h1 {
+	font-size: 30px;
+}
+h2 {
+	font-size: 25px;
+}
+h3 {
+	font-size: 20px;
 }
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: 142 0% 95%;
+	--foreground: 142 0% 0%;
+	--card: 142 0% 90%;
+	--card-foreground: 142 0% 10%;
+	--popover: 142 0% 95%;
+	--popover-foreground: 142 95% 0%;
+	--primary: 142 100% 64%;
+	--primary-foreground: 0 0% 0%;
+	--secondary: 142 10% 70%;
+	--secondary-foreground: 0 0% 0%;
+	--muted: 104 10% 85%;
+	--muted-foreground: 142 0% 35%;
+	--accent: 104 10% 80%;
+	--accent-foreground: 142 0% 10%;
+	--destructive: 0 50% 30%;
+	--destructive-foreground: 142 0% 90%;
+	--border: 142 20% 50%;
+	--input: 142 20% 18%;
+	--ring: 142 100% 64%;
+	--radius: 1rem;
+}
+.dark {
+	--background: 142 10% 5%;
+	--foreground: 142 0% 90%;
+	--card: 142 0% 0%;
+	--card-foreground: 142 0% 90%;
+	--popover: 142 10% 5%;
+	--popover-foreground: 142 0% 90%;
+	--primary: 142 100% 64%;
+	--primary-foreground: 0 0% 0%;
+	--secondary: 142 10% 10%;
+	--secondary-foreground: 0 0% 100%;
+	--muted: 104 10% 15%;
+	--muted-foreground: 142 0% 60%;
+	--accent: 104 10% 15%;
+	--accent-foreground: 142 0% 90%;
+	--destructive: 0 50% 30%;
+	--destructive-foreground: 142 0% 90%;
+	--border: 142 20% 18%;
+	--input: 142 20% 18%;
+	--ring: 142 100% 64%;
+	--radius: 1rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@theme inline {
+	--color-background: hsl(var(--background));
+	--color-foreground: hsl(var(--foreground));
+	--color-card: hsl(var(--card));
+	--color-card-foreground: hsl(var(--card-foreground));
+	--color-popover: hsl(var(--popover));
+	--color-popover-foreground: hsl(var(--popover-foreground));
+	--color-primary: hsl(var(--primary));
+	--color-primary-foreground: hsl(var(--primary-foreground));
+	--color-secondary: hsl(var(--secondary));
+	--color-secondary-foreground: hsl(var(--secondary-foreground));
+	--color-muted: hsl(var(--muted));
+	--color-muted-foreground: hsl(var(--muted-foreground));
+	--color-accent: hsl(var(--accent));
+	--color-accent-foreground: hsl(var(--accent-foreground));
+	--color-destructive: hsl(var(--destructive));
+	--color-destructive-foreground: hsl(var(--destructive-foreground));
+	--color-border: hsl(var(--border));
+	--color-input: hsl(var(--input));
+	--color-ring: hsl(var(--ring));
+	--color-chart-1: hsl(var(--chart-1));
+	--color-chart-2: hsl(var(--chart-2));
+	--color-chart-3: hsl(var(--chart-3));
+	--color-chart-4: hsl(var(--chart-4));
+	--color-chart-5: hsl(var(--chart-5));
+	--radius-sm: calc(var(--radius) - 4px);
+	--radius-md: calc(var(--radius) - 2px);
+	--radius-lg: var(--radius);
+	--radius-xl: calc(var(--radius) + 4px);
+	--color-sidebar: hsl(var(--sidebar));
+	--color-sidebar-foreground: hsl(var(--sidebar-foreground));
+	--color-sidebar-primary: hsl(var(--sidebar-primary));
+	--color-sidebar-primary-foreground: hsl(var(--sidebar-primary-foreground));
+	--color-sidebar-accent: hsl(var(--sidebar-accent));
+	--color-sidebar-accent-foreground: hsl(var(--sidebar-accent-foreground));
+	--color-sidebar-border: hsl(var(--sidebar-border));
+	--color-sidebar-ring: hsl(var(--sidebar-ring));
+	--shadow-3xl: 0 0 20px 0px;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer base {
+	* {
+		@apply border-border outline-ring/50;
+	}
+	body {
+		@apply bg-background text-foreground;
+	}
 }
